fixed design bottle not centered

--- a/styles/BottleDesign.module.css
+++ b/styles/BottleDesign.module.css
@@ -13,6 +13,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100%;
+  margin: auto;
 }
 /*header*/
 .header {
